--- a/proposal-106/index.html
+++ b/proposal-106/index.html
@@ -5,32 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aquarius Vote Booster Simulator</title>
   <style>
-    body { font-family: sans-serif; }
+    body { font-family: sans-serif; margin: 10px; }
     #loading { font-size: 1.2em; margin: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    .table-container { overflow-x: auto; }
+    table { border-collapse: collapse; width: 100%; min-width: 800px; margin-top: 20px; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
     th { background-color: #f2f2f2; }
     input[type="number"] { width: 80px; }
+    @media (max-width: 600px) {
+      th, td { padding: 6px; font-size: 0.9em; }
+      input[type="number"] { width: 60px; }
+      table { min-width: 600px; }
+    }
   </style>
 </head>
 <body>
   <h2>Aquarius Vote Booster Simulator</h2>
   <p>Enter bribes in the column below to see the effect on boosts and vote shares.</p>
   <div id="loading">Loading data<span id="dots"></span></div>
-  <table id="votesTable" style="display:none;">
-    <thead>
-      <tr>
-        <th>Market</th>
-        <th>Votes</th>
-        <th>Static Adj Votes</th>
-        <th>Bribes</th>
-        <th>Dynamic Boost</th>
-        <th>Dampened Adj Votes</th>
-        <th>Vote Share</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="table-container" style="display:none;" id="tableWrapper">
+    <table id="votesTable">
+      <thead>
+        <tr>
+          <th>Market</th>
+          <th>Votes</th>
+          <th>Static Adj Votes</th>
+          <th>Bribes</th>
+          <th>Dynamic Boost</th>
+          <th>Dampened Adj Votes</th>
+          <th>Vote Share</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
   <script>
     const API_BASE = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
     const HORIZON_BASE = 'https://horizon.stellar.org/accounts/';
@@ -38,14 +46,15 @@
     let dotCount = 0;
     const dotsEl = document.getElementById('dots');
     const loadingEl = document.getElementById('loading');
-    const tableEl = document.getElementById('votesTable');
+    const wrapperEl = document.getElementById('tableWrapper');
 
-    // Animate loading ellipsis
+    // Loading dots animation
     const dotInterval = setInterval(() => {
       dotCount = (dotCount + 1) % 4;
       dotsEl.textContent = '.'.repeat(dotCount);
     }, 500);
 
+    // Fetch all market vote snapshots with pagination
     async function fetchAllMarkets() {
       let results = [];
       let url = API_BASE;
@@ -58,31 +67,28 @@
       return results;
     }
 
-    async function fetchTrustlines(marketKey) {
+    // Fetch trustlines of a market key to determine asset pairs
+    async function fetchTrustlines(key) {
       try {
-        const res = await fetch(HORIZON_BASE + marketKey);
+        const res = await fetch(HORIZON_BASE + key);
         const data = await res.json();
         const balances = data.balances;
         const hasNative = balances.some(b => b.asset_type === 'native');
-        const nonNative = balances.filter(b => b.asset_type !== 'native').map(b => b.asset_code);
-        let assets = [];
-        if (nonNative.length >= 2) {
-          assets = nonNative;
-        } else if (nonNative.length === 1 && hasNative) {
-          assets = [nonNative[0], 'XLM'];
-        } else if (hasNative && nonNative.length === 0) {
-          assets = ['XLM'];
-        } else {
-          assets = nonNative.concat(hasNative ? ['XLM'] : []);
-        }
-        return assets;
+        const nonNative = balances
+          .filter(b => b.asset_type !== 'native')
+          .map(b => b.asset_code);
+        if (nonNative.length >= 2) return nonNative;
+        if (nonNative.length === 1 && hasNative) return [nonNative[0], 'XLM'];
+        if (hasNative && nonNative.length === 0) return ['XLM'];
+        return nonNative.concat(hasNative ? ['XLM'] : []);
       } catch (err) {
-        console.error(`Error loading trustlines for ${marketKey}:`, err);
+        console.error(`Error loading trustlines for ${key}:`, err);
         return ['XLM'];
       }
     }
 
-    function calculateStaticBoost(assets) {
+    // Calculate static boost multiplier
+    function calcStatic(assets) {
       let boost = 1;
       if (assets.includes('AQUA')) boost += 0.5;
       if (assets.includes('XLM')) boost += 0.3;
@@ -90,72 +96,73 @@
       return boost;
     }
 
-    function calculateDynamicBoost(bribe, maxBoost) {
+    // Exponential dampening curve
+    function calcDynamic(bribe, maxBoost) {
       return 1 + maxBoost * Math.exp(-bribe / (R_MARKET_CAP / 5));
     }
 
+    // Build table row for each market
     function createRow(item) {
       const tr = document.createElement('tr');
       tr.innerHTML = `
         <td>${item.market}</td>
         <td>${item.votes.toFixed(2)}</td>
-        <td>${item.staticBoostedVotes.toFixed(2)}</td>
+        <td>${item.staticAdj.toFixed(2)}</td>
         <td><input type="number" value="0" min="0" /></td>
         <td>${item.staticBoost.toFixed(2)}</td>
-        <td>${item.staticBoostedVotes.toFixed(2)}</td>
-        <td>0%</td>
-      `;
+        <td>${item.staticAdj.toFixed(2)}</td>
+        <td>0%</td>`;
       const input = tr.querySelector('input');
-      const dynBoostCell = tr.cells[4];
-      const dampenedCell = tr.cells[5];
-
+      const dynCell = tr.cells[4];
+      const dampCell = tr.cells[5];
       input.addEventListener('input', () => {
         const bribe = parseFloat(input.value) || 0;
-        let dynBoost = item.staticBoost;
+        let dyn = item.staticBoost;
         if (item.staticBoost === 1.3 || item.staticBoost === 1.5) {
-          dynBoost = calculateDynamicBoost(bribe, item.staticBoost - 1);
+          dyn = calcDynamic(bribe, item.staticBoost - 1);
         }
-        dynBoostCell.textContent = dynBoost.toFixed(2);
-        const dampened = item.votes * dynBoost;
-        dampenedCell.textContent = dampened.toFixed(2);
+        dynCell.textContent = dyn.toFixed(2);
+        const damp = item.votes * dyn;
+        dampCell.textContent = damp.toFixed(2);
         updateShares();
       });
-
       return tr;
     }
 
+    // Update vote share using absolute values for dampened votes
     function updateShares() {
       const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-      // Gather dampened values, ignore negatives
-      const dampenedValues = rows.map(r => parseFloat(r.cells[5].textContent))
-                                  .map(v => v > 0 ? v : 0);
-      const total = dampenedValues.reduce((sum, v) => sum + v, 0) || 1;
+      const rawValues = rows.map(r => parseFloat(r.cells[5].textContent));
+      const absValues = rawValues.map(v => Math.abs(v));
+      const total = absValues.reduce((sum, v) => sum + v, 0) || 1;
       rows.forEach((r, i) => {
-        const val = dampenedValues[i];
-        r.cells[6].textContent = val > 0 ? ((val / total) * 100).toFixed(2) + '%' : '0%';
+        const share = ((absValues[i] / total) * 100).toFixed(2) + '%';
+        r.cells[6].textContent = share;
       });
     }
 
+    // Initialize table
     async function init() {
       const markets = await fetchAllMarkets();
-      const assetsArray = await Promise.all(markets.map(m => fetchTrustlines(m.market_key)));
-      const tbody = document.querySelector('#votesTable tbody');
+      const assetsArray = await Promise.all(
+        markets.map(m => fetchTrustlines(m.market_key))
+      );
       const fragment = document.createDocumentFragment();
       markets.forEach((m, i) => {
         const assets = assetsArray[i];
         const marketName = assets.join(' / ');
         const votes = parseFloat(m.votes_value);
-        const staticBoost = calculateStaticBoost(assets);
-        const staticBoostedVotes = votes * staticBoost;
-        const item = { market: marketName, votes, staticBoost, staticBoostedVotes };
-        fragment.appendChild(createRow(item));
+        const staticBoost = calcStatic(assets);
+        const staticAdj = votes * staticBoost;
+        fragment.appendChild(
+          createRow({ market: marketName, votes, staticBoost, staticAdj })
+        );
       });
-      tbody.appendChild(fragment);
+      document.querySelector('#votesTable tbody').appendChild(fragment);
       updateShares();
-      // Hide loading, show table
       clearInterval(dotInterval);
       loadingEl.style.display = 'none';
-      tableEl.style.display = '';
+      wrapperEl.style.display = 'block';
     }
 
     init();
