--- a/proposal-106/index.html
+++ b/proposal-106/index.html
@@ -51,11 +51,13 @@
     const wrapperEl = document.getElementById('tableWrapper');
     const totalEl = document.getElementById('totalVotes');
 
+    // Animate loading dots
     const dotInterval = setInterval(() => {
       dotCount = (dotCount + 1) % 4;
       dotsEl.textContent = '.'.repeat(dotCount);
     }, 500);
 
+    // Fetch all markets with pagination
     async function fetchAllMarkets() {
       let results = [];
       let url = API_BASE;
@@ -68,6 +70,7 @@
       return results;
     }
 
+    // Determine asset pairs from trustlines
     async function fetchTrustlines(key) {
       try {
         const res = await fetch(HORIZON_BASE + key);
@@ -84,6 +87,7 @@
       }
     }
 
+    // Calculate static boost multiplier
     function calcStatic(assets) {
       let boost = 1;
       if (assets.includes('AQUA')) boost += 0.5;
@@ -92,19 +96,23 @@
       return boost;
     }
 
+    // Exponential dampening curve
     function calcDynamic(bribe, maxBoost) {
       return 1 + maxBoost * Math.exp(-bribe / (R_MARKET_CAP / 5));
     }
 
+    // Build table row for each market
     function createRow(item) {
       const tr = document.createElement('tr');
+      // Determine initial dampened display: show staticAdj if votes positive, else show originalVotes
+      const initialDamp = item.originalVotes > 0 ? item.staticAdj : item.originalVotes;
       tr.innerHTML = `
         <td>${item.market}</td>
         <td>${item.originalVotes.toFixed(2)}</td>
         <td>${item.staticAdj.toFixed(2)}</td>
         <td><input type="number" value="0" min="0" /></td>
         <td>${item.staticBoost.toFixed(2)}</td>
-        <td>${item.staticAdj.toFixed(2)}</td>
+        <td>${initialDamp.toFixed(2)}</td>
         <td>0%</td>`;
       const input = tr.querySelector('input');
       const dynCell = tr.cells[4];
@@ -131,6 +139,7 @@
       return tr;
     }
 
+    // Update share and total calculations
     function updateShares() {
       const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
       const rawDamp = rows.map(r => parseFloat(r.cells[5].textContent));
@@ -145,6 +154,7 @@
       totalEl.style.display = 'block';
     }
 
+    // Initialize the table
     async function init() {
       const markets = await fetchAllMarkets();
       const assetsArr = await Promise.all(markets.map(m => fetchTrustlines(m.market_key)));
