--- a/proposal-106.1/index.html
+++ b/proposal-106.1/index.html
@@ -7,20 +7,20 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: sans-serif; margin: 10px; }
-    #loading { font-size: 1.2em; margin: 20px; }
-    .controls { display: flex; flex-wrap: wrap; gap: 16px; align-items: center; margin-top: 20px; }
-    .control { display: flex; flex-direction: column; font-size: 0.9em; }
-    .control label { margin-bottom: 4px; }
-    .control input { width: 100px; padding: 4px; }
-    .chart-container { width: 100%; max-width: 600px; margin-top: 20px; }
+    pre { background: #f9f9f9; padding: 10px; }
+    .controls { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 20px; }
+    .control { display: flex; flex-direction: column; }
+    .control label { margin-bottom: 4px; font-size: 0.9em; }
+    .control input { padding: 4px; width: 100px; }
+    .chart-container { max-width: 600px; margin-top: 20px; }
     .table-container { overflow-x: auto; margin-top: 40px; }
-    table { border-collapse: collapse; width: 100%; min-width: 800px; margin-top: 20px; }
+    table { border-collapse: collapse; width: 100%; min-width: 800px; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
     th { background-color: #f2f2f2; }
-    input[type="number"] { width: 80px; }
+    input[type=number] { width: 80px; }
     #totalVotes { margin-top: 20px; font-weight: bold; }
     @media (max-width: 600px) {
-      .controls { flex-direction: column; align-items: flex-start; }
+      .controls { flex-direction: column; }
       .control input { width: 80px; }
       table { min-width: 600px; }
     }
@@ -33,19 +33,19 @@
 
   <div class="controls">
     <div class="control">
-      <label>Divisor</label>
+      <label for="divisor">Divisor</label>
       <input type="number" id="divisor" value="5" min="1" />
     </div>
     <div class="control">
-      <label>R_total (AQUA/day)</label>
+      <label for="rTotal">R_total (AQUA/day)</label>
       <input type="number" id="rTotal" value="7000000" min="0" />
     </div>
     <div class="control">
-      <label>P_cap (%)</label>
+      <label for="pCap">P_cap (%)</label>
       <input type="number" id="pCap" value="10" min="0" max="100" />
     </div>
     <div class="control">
-      <label>R_market_cap</label>
+      <label for="rMarketCap">R_market_cap</label>
       <input type="text" id="rMarketCap" value="700000" disabled />
     </div>
   </div>
@@ -76,45 +76,34 @@
   <div id="totalVotes" style="display:none;">Total Votes: 0</div>
 
   <script>
-    // Chart.js setup
+    // Chart setup
     const ctx = document.getElementById('curveChart').getContext('2d');
     let curveChart;
-
     function computeCurve(maxBoost, rMarketCap, divisor) {
-      const points = [];
+      const pts = [];
       const step = rMarketCap / 50;
       for (let b = 0; b <= rMarketCap; b += step) {
         const boost = 1 + maxBoost * Math.exp(-b / (rMarketCap / divisor));
-        points.push({ x: b, y: boost });
+        pts.push({ x: b, y: boost });
       }
-      return points;
+      return pts;
     }
-
     function updateChart() {
-      const divisor = parseFloat(document.getElementById('divisor').value) || 5;
-      const rTotal = parseFloat(document.getElementById('rTotal').value) || 0;
-      const pCap = parseFloat(document.getElementById('pCap').value) || 0;
+      const divisor = +document.getElementById('divisor').value || 5;
+      const rTotal = +document.getElementById('rTotal').value || 0;
+      const pCap = +document.getElementById('pCap').value || 0;
       const rMarketCap = rTotal * pCap / 100;
       document.getElementById('rMarketCap').value = rMarketCap.toFixed(2);
-
       const dataA = computeCurve(0.3, rMarketCap, divisor);
       const dataB = computeCurve(0.5, rMarketCap, divisor);
-
       if (!curveChart) {
         curveChart = new Chart(ctx, {
           type: 'line',
-          data: {
-            datasets: [
-              { label: 'MaxBoost 0.3', data: dataA, borderColor: 'blue', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } },
-              { label: 'MaxBoost 0.5', data: dataB, borderColor: 'red', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } }
-            ]
-          },
-          options: {
-            scales: {
-              x: { type: 'linear', title: { display: true, text: 'Bribe' } },
-              y: { title: { display: true, text: 'Boost' } }
-            }
-          }
+          data: { datasets: [
+            { label: 'MaxBoost 0.3', data: dataA, borderColor: 'blue', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } },
+            { label: 'MaxBoost 0.5', data: dataB, borderColor: 'red', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } }
+          ] },
+          options: { scales: { x: { type: 'linear', title: { display: true, text: 'Bribe' } }, y: { title: { display: true, text: 'Boost' } } } }
         });
       } else {
         curveChart.data.datasets[0].data = dataA;
@@ -122,127 +111,93 @@
         curveChart.update();
       }
     }
+    ['divisor','rTotal','pCap'].forEach(id => document.getElementById(id).addEventListener('input', updateChart));
 
-    ['divisor', 'rTotal', 'pCap'].forEach(id =>
-      document.getElementById(id).addEventListener('input', updateChart)
-    );
-
-    // Loading animation and existing table logic
-    const API_BASE = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
-    const HORIZON_BASE = 'https://horizon.stellar.org/accounts/';
-    const R_MARKET_CAP_DEFAULT = 700000;
-    let dotCount = 0;
+    // Loading animation
+    const API = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
+    const HORIZON = 'https://horizon.stellar.org/accounts/';
+    let dot = 0;
     const dotsEl = document.getElementById('dots');
     const loadingEl = document.getElementById('loading');
     const wrapperEl = document.getElementById('tableWrapper');
     const totalEl = document.getElementById('totalVotes');
-    const dotInterval = setInterval(() => {
-      dotCount = (dotCount + 1) % 4;
-      dotsEl.textContent = '.'.repeat(dotCount);
-    }, 500);
+    const interval = setInterval(() => { dot = (dot + 1) % 4; dotsEl.textContent = '.'.repeat(dot); }, 500);
 
-    async function fetchAllMarkets() {
-      let results = [];
-      let url = API_BASE;
-      while (url) {
-        const res = await fetch(url);
-        const data = await res.json();
-        results = results.concat(data.results);
-        url = data.next;
-      }
-      return results;
+    async function fetchMarkets() {
+      let arr = [], url = API;
+      while (url) { const res = await fetch(url), data = await res.json(); arr.push(...data.results); url = data.next; }
+      return arr;
     }
-
     async function fetchTrustlines(key) {
-      try {
-        const res = await fetch(HORIZON_BASE + key);
-        const data = await res.json();
+      try { const res = await fetch(HORIZON + key), data = await res.json();
         const bal = data.balances;
-        const hasNative = bal.some(b => b.asset_type === 'native');
-        const nonNative = bal.filter(b => b.asset_type !== 'native').map(b => b.asset_code);
-        if (nonNative.length >= 2) return nonNative;
-        if (nonNative.length === 1 && hasNative) return [nonNative[0], 'XLM'];
-        if (hasNative && nonNative.length === 0) return ['XLM'];
-        return nonNative.concat(hasNative ? ['XLM'] : []);
-      } catch {
-        return ['XLM'];
-      }
+        const hasX = bal.some(b=>b.asset_type==='native');
+        const nonX = bal.filter(b=>b.asset_type!=='native').map(b=>b.asset_code);
+        if (nonX.length>=2) return nonX;
+        if (nonX.length===1 && hasX) return [nonX[0],'XLM'];
+        if (hasX && !nonX.length) return ['XLM'];
+        return [...nonX, ...(hasX?['XLM']:[])];
+      } catch { return ['XLM']; }
     }
-
-    function calcStatic(assets) {
-      let boost = 1;
-      if (assets.includes('AQUA')) boost += 0.5;
-      if (assets.includes('XLM')) boost += 0.3;
-      if (assets.includes('USDC')) boost += 0.3;
-      return boost;
+    function calcStatic(a){ let b=1; if(a.includes('AQUA')) b+=0.5; if(a.includes('XLM')) b+=0.3; if(a.includes('USDC')) b+=0.3; return b; }
+    function calcDynamic(bribe, maxBoost) {
+      const divisor = +document.getElementById('divisor').value || 5;
+      const rMarketCap = +document.getElementById('rMarketCap').value || 0;
+      return 1 + maxBoost * Math.exp(-bribe / (rMarketCap / divisor));
     }
-
-    function calcDynamic(bribe, maxBoost, originalVotes) {
-      return originalVotes > 0
-        ? 1 + maxBoost * Math.exp(-bribe / (R_MARKET_CAP_DEFAULT / parseFloat(document.getElementById('divisor').value)))
-        : maxBoost;
-    }
-
     function createRow(item) {
       const tr = document.createElement('tr');
-      const initDamp = item.originalVotes > 0 ? item.staticAdj : item.originalVotes;
+      const initDyn = item.staticBoost;
+      const initDamp = item.original > 0 ? item.original * item.staticBoost : item.original;
       tr.innerHTML = `
         <td>${item.market}</td>
-        <td>${item.originalVotes.toFixed(2)}</td>
-        <td>${item.staticAdj.toFixed(2)}</td>
-        <td><input type=\"number\" value=\"0\" min=\"0\" /></td>
-        <td>${item.staticBoost.toFixed(5)}</td>
+        <td>${item.original.toFixed(2)}</td>
+        <td>${(item.original>0?item.original*item.staticBoost:0).toFixed(2)}</td>
+        <td><input type="number" value="0" min="0"></td>
+        <td>${initDyn.toFixed(5)}</td>
         <td>${initDamp.toFixed(2)}</td>
         <td>0.00000%</td>`;
       const inp = tr.querySelector('input');
       const dynCell = tr.cells[4];
       const dampCell = tr.cells[5];
       inp.addEventListener('input', () => {
-        const br = parseFloat(inp.value) || 0;
-        const dynA = calcDynamic(br, item.staticBoost - 1, item.originalVotes) + (item.originalVotes > 0 ? 1 : 0);
-        dynCell.textContent = dynA.toFixed(5);
-        const damp = item.originalVotes > 0 ? item.originalVotes * dynA : item.originalVotes;
+        const br = +inp.value || 0;
+        const maxB = item.staticBoost - 1;
+        const dyn = item.original>0 ? calcDynamic(br, maxB) : item.staticBoost;
+        dynCell.textContent = dyn.toFixed(5);
+        const damp = item.original>0 ? item.original*dyn : item.original;
         dampCell.textContent = damp.toFixed(2);
         updateShares();
       });
       return tr;
     }
-
     function updateShares() {
-      const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-      const rawDamp = rows.map(r => parseFloat(r.cells[5].textContent));
-      const positives = rawDamp.map(v => (v > 0 ? v : 0));
-      const totalPos = positives.reduce((s, v) => s + v, 0) || 0;
-      rows.forEach((r, i) => {
-        r.cells[6].textContent = positives[i] > 0
-          ? ((positives[i] / totalPos) * 100).toFixed(5) + '%'
-          : '0.00000%';
-      });
-      const totalRaw = rawDamp.reduce((s, v) => s + v, 0);
+      const rows = [...document.querySelectorAll('#votesTable tbody tr')];
+      const raw = rows.map(r=>+r.cells[5].textContent);
+      const pos = raw.map(v=>v>0?v:0);
+      const sumPos = pos.reduce((s,v)=>s+v,0)||0;
+      rows.forEach((r,i)=>r.cells[6].textContent=pos[i]>0?((pos[i]/sumPos)*100).toFixed(5)+'%':'0.00000%');
+      const totalRaw = raw.reduce((s,v)=>s+v,0);
       totalEl.textContent = `Total Votes: ${totalRaw.toFixed(2)}`;
-      totalEl.style.display = 'block';
+      totalEl.style.display='block';
     }
-
-    async function init() {
+    async function init(){
       updateChart();
-      const markets = await fetchAllMarkets();
-      const assetsArr = await Promise.all(markets.map(m => fetchTrustlines(m.market_key)));
+      const mkts = await fetchMarkets();
+      const assets = await Promise.all(mkts.map(m=>fetchTrustlines(m.market_key)));
       const frag = document.createDocumentFragment();
-      markets.forEach((m, i) => {
-        const orig = parseFloat(m.votes_value);
-        const market = assetsArr[i].join(' / ');
-        const sb = calcStatic(assetsArr[i]);
-        const base = orig > 0 ? orig : 0;
-        const sa = base * sb;
-        frag.appendChild(createRow({ market, originalVotes: orig, staticBoost: sb, staticAdj: sa }));
+      mkts.forEach((m,i) => {
+        const orig = +m.votes_value;
+        const st = calcStatic(assets[i]);
+        const sa = orig>0?orig*st:0;
+        frag.appendChild(createRow({market:assets[i].join(' / '),original:orig,staticBoost:st,staticAdj:sa}));
       });
       document.querySelector('#votesTable tbody').appendChild(frag);
       updateShares();
-      clearInterval(dotInterval);
-      loadingEl.style.display = 'none';
-      wrapperEl.style.display = 'block';
+      clearInterval(interval);
+      loadingEl.style.display='none';
+      wrapperEl.style.display='block';
     }
-
     init();
   </script>
 </body>
