--- a/proposal-106/index.html
+++ b/proposal-106/index.html
@@ -2,28 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aquarius Vote Booster Simulator</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; margin: 10px; }
-    #loading { font-size: 1.2em; margin: 20px; }
-    .table-container { overflow-x: auto; }
-    table { border-collapse: collapse; width: 100%; min-width: 800px; margin-top: 20px; }
+    body { font-family: sans-serif; margin: 10px; position: relative; }
+    pre { background: #f9f9f9; padding: 10px; }
+    .controls { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 20px; }
+    .control { display: flex; flex-direction: column; }
+    .control label { margin-bottom: 4px; font-size: 0.9em; }
+    .control input { padding: 4px; width: 100px; }
+    .chart-container { max-width: 600px; margin-top: 20px; }
+    .table-container { overflow-x: auto; margin-top: 40px; }
+    table { border-collapse: collapse; width: 100%; min-width: 800px; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
     th { background-color: #f2f2f2; }
-    input[type="number"] { width: 80px; }
+    input[type=number] { width: 80px; }
     #totalVotes { margin-top: 20px; font-weight: bold; }
+    /* Loading overlay */
+    #loading {
+      font-size: 1.2em;
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.9);
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+      z-index: 10;
+    }
     @media (max-width: 600px) {
-      th, td { padding: 6px; font-size: 0.9em; }
-      input[type="number"] { width: 60px; }
+      .controls { flex-direction: column; }
+      .control input { width: 80px; }
       table { min-width: 600px; }
     }
   </style>
 </head>
 <body>
   <h2>Aquarius Vote Booster Simulator</h2>
-  <p>Enter bribes in the column below to see the effect on boosts and vote shares.</p>
+  <p>Boost formula (fixed):</p>
+  <pre>Boost = 1 + MaxBoost × e<sup>–Bribe / (R_market_cap ÷ Divisor)</sup></pre>
+
+  <div class="controls">
+    <div class="control">
+      <label for="divisor">Divisor</label>
+      <input type="number" id="divisor" value="5" min="1" />
+    </div>
+    <div class="control">
+      <label for="rTotal">R_total (AQUA/day)</label>
+      <input type="number" id="rTotal" value="7000000" min="0" />
+    </div>
+    <div class="control">
+      <label for="pCap">P_cap (%)</label>
+      <input type="number" id="pCap" value="10" min="0" max="100" />
+    </div>
+    <div class="control">
+      <label for="rMarketCap">R_market_cap</label>
+      <input type="text" id="rMarketCap" value="700000" disabled />
+    </div>
+  </div>
+
+  <div class="chart-container">
+    <canvas id="curveChart"></canvas>
+  </div>
+
+  <!-- Loading indicator -->
   <div id="loading">Loading data<span id="dots"></span></div>
+
   <div class="table-container" id="tableWrapper" style="display:none;">
     <table id="votesTable">
       <thead>
@@ -40,140 +85,152 @@
       <tbody></tbody>
     </table>
   </div>
+
   <div id="totalVotes" style="display:none;">Total Votes: 0</div>
+
   <script>
-    const API_BASE = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
-    const HORIZON_BASE = 'https://horizon.stellar.org/accounts/';
-    const R_MARKET_CAP = 700000;
-    let dotCount = 0;
+    // Chart setup
+    const ctx = document.getElementById('curveChart').getContext('2d');
+    let curveChart;
+    function computeCurve(maxBoost, rMarketCap, divisor) {
+      const pts = [];
+      if (isNaN(rMarketCap) || rMarketCap <= 0) {
+        pts.push({ x: 0, y: 1 + maxBoost });
+        return pts;
+      }
+      const step = rMarketCap / 50;
+      for (let b = 0; b <= rMarketCap; b += step) {
+        const boost = 1 + maxBoost * Math.exp(-b / (rMarketCap / divisor));
+        pts.push({ x: b, y: boost });
+      }
+      return pts;
+    }
+    function updateChart() {
+      let divisor = parseFloat(document.getElementById('divisor').value);
+      if (isNaN(divisor) || divisor <= 0) divisor = 5;
+      let rTotal = parseFloat(document.getElementById('rTotal').value);
+      if (isNaN(rTotal) || rTotal < 0) rTotal = 7000000;
+      let pCap = parseFloat(document.getElementById('pCap').value);
+      if (isNaN(pCap) || pCap < 0) pCap = 10;
+      const rMarketCap = rTotal * pCap / 100;
+      document.getElementById('rMarketCap').value = rMarketCap.toFixed(2);
+
+      const dataA = computeCurve(0.3, rMarketCap, divisor);
+      const dataB = computeCurve(0.5, rMarketCap, divisor);
+      if (!curveChart) {
+        curveChart = new Chart(ctx, {
+          type: 'line',
+          data: { datasets: [
+            { label: 'MaxBoost 0.3', data: dataA, borderColor: 'blue', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } },
+            { label: 'MaxBoost 0.5', data: dataB, borderColor: 'red', fill: false, parsing: { xAxisKey: 'x', yAxisKey: 'y' } }
+          ] },
+          options: { scales: { x: { type: 'linear', title: { display: true, text: 'Bribe' } }, y: { title: { display: true, text: 'Boost' } } } }
+        });
+      } else {
+        curveChart.data.datasets[0].data = dataA;
+        curveChart.data.datasets[1].data = dataB;
+        curveChart.update();
+      }
+    }
+    ['divisor','rTotal','pCap'].forEach(id => document.getElementById(id).addEventListener('input', updateChart));
+
+    // Loading & table logic
+    const API = 'https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200';
+    const HORIZON = 'https://horizon.stellar.org/accounts/';
+    let dot = 0;
     const dotsEl = document.getElementById('dots');
     const loadingEl = document.getElementById('loading');
     const wrapperEl = document.getElementById('tableWrapper');
     const totalEl = document.getElementById('totalVotes');
+    const interval = setInterval(() => { dot = (dot + 1) % 4; dotsEl.textContent = '.'.repeat(dot); }, 500);
 
-    // Animate loading dots
-    const dotInterval = setInterval(() => {
-      dotCount = (dotCount + 1) % 4;
-      dotsEl.textContent = '.'.repeat(dotCount);
-    }, 500);
-
-    // Fetch all markets with pagination
-    async function fetchAllMarkets() {
-      let results = [];
-      let url = API_BASE;
+    async function fetchMarkets() {
+      let arr = [], url = API;
       while (url) {
-        const res = await fetch(url);
-        const data = await res.json();
-        results = results.concat(data.results);
+        const res = await fetch(url), data = await res.json();
+        arr.push(...data.results);
         url = data.next;
       }
-      return results;
+      return arr;
     }
-
-    // Determine asset pairs from trustlines
     async function fetchTrustlines(key) {
       try {
-        const res = await fetch(HORIZON_BASE + key);
-        const data = await res.json();
-        const balances = data.balances;
-        const hasNative = balances.some(b => b.asset_type === 'native');
-        const nonNative = balances.filter(b => b.asset_type !== 'native').map(b => b.asset_code);
-        if (nonNative.length >= 2) return nonNative;
-        if (nonNative.length === 1 && hasNative) return [nonNative[0], 'XLM'];
-        if (hasNative && nonNative.length === 0) return ['XLM'];
-        return nonNative.concat(hasNative ? ['XLM'] : []);
+        const res = await fetch(HORIZON + key), data = await res.json();
+        const bal = data.balances;
+        const hasX = bal.some(b => b.asset_type === 'native');
+        const nonX = bal.filter(b => b.asset_type !== 'native').map(b => b.asset_code);
+        if (nonX.length >= 2) return nonX;
+        if (nonX.length === 1 && hasX) return [nonX[0], 'XLM'];
+        if (hasX && !nonX.length) return ['XLM'];
+        return [...nonX, ...(hasX ? ['XLM'] : [])];
       } catch {
         return ['XLM'];
       }
     }
-
-    // Calculate static boost multiplier
-    function calcStatic(assets) {
-      let boost = 1;
-      if (assets.includes('AQUA')) boost += 0.5;
-      if (assets.includes('XLM')) boost += 0.3;
-      if (assets.includes('USDC')) boost += 0.3;
-      return boost;
-    }
-
-    // Exponential dampening curve
+    function calcStatic(a) { let b = 1; if (a.includes('AQUA')) b += 0.5; if (a.includes('XLM')) b += 0.3; if (a.includes('USDC')) b += 0.3; return b; }
     function calcDynamic(bribe, maxBoost) {
-      return 1 + maxBoost * Math.exp(-bribe / (R_MARKET_CAP / 5));
+      let divisor = parseFloat(document.getElementById('divisor').value);
+      if (isNaN(divisor) || divisor <= 0) divisor = 5;
+      let rMarketCap = parseFloat(document.getElementById('rMarketCap').value);
+      if (isNaN(rMarketCap) || rMarketCap <= 0) rMarketCap = 700000;
+      return 1 + maxBoost * Math.exp(-bribe / (rMarketCap / divisor));
     }
-
-    // Build table row for each market
     function createRow(item) {
       const tr = document.createElement('tr');
-      const initialDamp = item.originalVotes > 0 ? item.staticAdj : item.originalVotes;
+      const initDyn = item.staticBoost;
+      const initDamp = item.original > 0 ? item.original * item.staticBoost : item.original;
       tr.innerHTML = `
         <td>${item.market}</td>
-        <td>${item.originalVotes.toFixed(2)}</td>
-        <td>${item.staticAdj.toFixed(2)}</td>
-        <td><input type="number" value="0" min="0" /></td>
-        <td>${item.staticBoost.toFixed(5)}</td>
-        <td>${initialDamp.toFixed(2)}</td>
+        <td>${item.original.toFixed(2)}</td>
+        <td>${(item.original>0?item.original*item.staticBoost:0).toFixed(2)}</td>
+        <td><input type="number" value="0" min="0"></td>
+        <td>${initDyn.toFixed(5)}</td>
+        <td>${initDamp.toFixed(2)}</td>
         <td>0.00000%</td>`;
-      const input = tr.querySelector('input');
+      const inp = tr.querySelector('input');
       const dynCell = tr.cells[4];
       const dampCell = tr.cells[5];
-
-      input.addEventListener('input', () => {
-        let dyn = item.staticBoost;
-        let damp;
-        if (item.originalVotes > 0) {
-          const bribe = parseFloat(input.value) || 0;
-          dyn = (item.staticBoost === 1.3 || item.staticBoost === 1.5)
-            ? calcDynamic(bribe, item.staticBoost - 1)
-            : item.staticBoost;
-          damp = item.originalVotes * dyn;
-        } else {
-          dyn = item.staticBoost;
-          damp = item.originalVotes;
-        }
+      inp.addEventListener('input', () => {
+        const br = +inp.value || 0;
+        let dyn;
+        if (item.staticBoost > 1.5) dyn = item.staticBoost;
+        else if (item.original > 0) dyn = calcDynamic(br, item.staticBoost - 1);
+        else dyn = item.staticBoost;
         dynCell.textContent = dyn.toFixed(5);
+        const damp = item.original > 0 ? item.original * dyn : item.original;
         dampCell.textContent = damp.toFixed(2);
         updateShares();
       });
-
       return tr;
     }
-
-    // Update share and total calculations
     function updateShares() {
-      const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-      const rawDamp = rows.map(r => parseFloat(r.cells[5].textContent));
-      const positives = rawDamp.map(v => (v > 0 ? v : 0));
-      const totalPositive = positives.reduce((sum, v) => sum + v, 0) || 0;
-      rows.forEach((r, i) => {
-        const share = positives[i] > 0 ? ((positives[i] / totalPositive) * 100).toFixed(5) + '%' : '0.00000%';
-        r.cells[6].textContent = share;
-      });
-      const totalRaw = rawDamp.reduce((sum, v) => sum + v, 0);
+      const rows = [...document.querySelectorAll('#votesTable tbody tr')];
+      const raw = rows.map(r=>+r.cells[5].textContent);
+      const pos = raw.map(v=>v>0?v:0);
+      const sumPos = pos.reduce((s,v)=>s+v,0)||0;
+      rows.forEach((r,i)=>r.cells[6].textContent=pos[i]>0?((pos[i]/sumPos)*100).toFixed(5)+'%':'0.00000%');
+      const totalRaw = raw.reduce((s,v)=>s+v,0);
       totalEl.textContent = `Total Votes: ${totalRaw.toFixed(2)}`;
-      totalEl.style.display = 'block';
+      totalEl.style.display='block';
     }
-
-    // Initialize the table
-    async function init() {
-      const markets = await fetchAllMarkets();
-      const assetsArr = await Promise.all(markets.map(m => fetchTrustlines(m.market_key)));
-      const fragment = document.createDocumentFragment();
-      markets.forEach((m, i) => {
-        const originalVotes = parseFloat(m.votes_value);
-        const market = assetsArr[i].join(' / ');
-        const staticBoost = calcStatic(assetsArr[i]);
-        const baseVotes = originalVotes > 0 ? originalVotes : 0;
-        const staticAdj = baseVotes * staticBoost;
-        fragment.appendChild(createRow({ market, originalVotes, staticBoost, staticAdj }));
+    async function init(){
+      updateChart();
+      const mkts = await fetchMarkets();
+      const assets = await Promise.all(mkts.map(m=>fetchTrustlines(m.market_key)));
+      const frag = document.createDocumentFragment();
+      mkts.forEach((m,i)=>{
+        const orig=+m.votes_value;
+        const st=calcStatic(assets[i]);
+        frag.appendChild(createRow({market:assets[i].join(' / '),original:orig,staticBoost:st}));
       });
-      document.querySelector('#votesTable tbody').appendChild(fragment);
+      document.querySelector('#votesTable tbody').appendChild(frag);
       updateShares();
-      clearInterval(dotInterval);
-      loadingEl.style.display = 'none';
-      wrapperEl.style.display = 'block';
+      clearInterval(interval);
+      loadingEl.style.display='none';
+      wrapperEl.style.display='block';
     }
-
     init();
   </script>
 </body>
 </html>
+ 
