--- a/proposal106.1/index.html
+++ b/proposal106.1/index.html
@@ -19,7 +19,6 @@
     th { background-color: #f2f2f2; }
     input[type=number] { width: 80px; }
     #totalVotes { margin-top: 20px; font-weight: bold; }
-    /* Loading overlay */
     #loading {
       font-size: 1.2em;
       position: absolute;
@@ -66,7 +65,6 @@
     <canvas id="curveChart"></canvas>
   </div>
 
-  <!-- Loading indicator -->
   <div id="loading">Loading data<span id="dots"></span></div>
 
   <div class="table-container" id="tableWrapper" style="display:none;">
@@ -83,6 +81,17 @@
         </tr>
       </thead>
       <tbody></tbody>
+      <tfoot>
+        <tr>
+          <td><strong>Total</strong></td>
+          <td id="totalVotesCol">0.00</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td id="totalDampCol">0.00</td>
+          <td id="totalShareCol">0.00000%</td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 
@@ -206,12 +215,19 @@
     function updateShares() {
       const rows = [...document.querySelectorAll('#votesTable tbody tr')];
       const raw = rows.map(r=>+r.cells[5].textContent);
-      const pos = raw.map(v=>v>0?v:0);
+      const pos = raw.map(v=>v>0?v:Math.abs(v));
       const sumPos = pos.reduce((s,v)=>s+v,0)||0;
       rows.forEach((r,i)=>r.cells[6].textContent=pos[i]>0?((pos[i]/sumPos)*100).toFixed(5)+'%':'0.00000%');
-      const totalRaw = raw.reduce((s,v)=>s+v,0);
-      totalEl.textContent = `Total Votes: ${totalRaw.toFixed(2)}`;
-      totalEl.style.display='block';
+      // Totals
+      const totalVotesCol = rows.map(r=>Math.abs(+r.cells[1].textContent)).reduce((s,v)=>s+v,0);
+      const totalDampCol = rows.map(r=>Math.abs(+r.cells[5].textContent)).reduce((s,v)=>s+v,0);
+      const totalShareCol = rows.reduce((s,r)=>s+parseFloat(r.cells[6].textContent)||0,0);
+      document.getElementById('totalVotesCol').textContent = totalVotesCol.toFixed(2);
+      document.getElementById('totalDampCol').textContent = totalDampCol.toFixed(2);
+      document.getElementById('totalShareCol').textContent = totalShareCol.toFixed(5) + '%';
+      // Hide loading, show table
+      totalEl.textContent = `Total Votes: ${totalDampCol.toFixed(2)}`;
+      totalEl.style.display = 'block';
     }
     async function init(){
       updateChart();
